# SoftQuake

./: .gitignore  README.md
Source/: 1_srcs.mk  3_config_linux.mk  3_config_win32_cross.mk  4_options.mk  5_recipe.mk  Makefile  Makefile.vertool  build-cross-win32.sh  build-linux.sh  build-win32.sh  build.sh  cc_features.h  cd_sdl.c  cl_demo.c  cl_main.c  cl_parse.c  clean-all.sh  cmd.h  common.c  common.h  console.c  console.h  cvar.c  cvar.h  cvar_common.c  cvar_common.h  dist.sh  draw.c  gl_common.c  gl_draw.c  gl_mesh.c  gl_model.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_screen.c  gl_texmgr.c  gl_texmgr.h  gl_texmgr_null.c  gl_vidsdl.c  (+59 more)
Source/reference/: gl_vidlinux.c  gl_vidlinuxglx.c  readme.txt
